// Copyright 2020-2021 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.alpha.registry.v1alpha1;

import "buf/alpha/api/v1alpha1/api.proto";
import "buf/alpha/registry/v1alpha1/repository_tag.proto";
import "google/protobuf/timestamp.proto";

message RepositoryCommit {
  // primary key, unique, immutable
  string id = 1;
  // immutable
  google.protobuf.Timestamp create_time = 2;
  // The digest of the commit.
  string digest = 3;
  // The name of the commit.
  // This is what is referenced by users.
  // Unique, immutable.
  string name = 4;
  // The branch on which this commit was created.
  string branch = 5;
  // The commit sequence ID for this commit. This
  // is essentially what number commit this is on
  // the branch.
  int64 commit_sequence_id = 6;
  // The username of the user who authored this commit.
  string author = 7;
  // The tags associated with this commit
  repeated buf.alpha.registry.v1alpha1.RepositoryTag tags = 8;
}

// RepositoryCommitService is the Repository commit service.
service RepositoryCommitService {
  // ListRepositoryCommitsByBranch lists the repository commits associated
  // with a repository branch on a repository, ordered by their create time.
  rpc ListRepositoryCommitsByBranch(ListRepositoryCommitsByBranchRequest) returns (ListRepositoryCommitsByBranchResponse) {
    option (buf.alpha.api.v1alpha1.access_type) = ACCESS_TYPE_READ;
  }
  // GetRepositoryCommitByReference returns the repository commit matching
  // the provided reference, if it exists.
  rpc GetRepositoryCommitByReference(GetRepositoryCommitByReferenceRequest) returns (GetRepositoryCommitByReferenceResponse) {
    option (buf.alpha.api.v1alpha1.access_type) = ACCESS_TYPE_READ;
  }
  // GetRepositoryCommitBySequenceID returns the repository commit matching
  // the provided sequence ID and branch, if it exists.
  rpc GetRepositoryCommitBySequenceID(GetRepositoryCommitBySequenceIDRequest) returns (GetRepositoryCommitBySequenceIDResponse) {
    option (buf.alpha.api.v1alpha1.access_type) = ACCESS_TYPE_READ;
  }
}

message ListRepositoryCommitsByBranchRequest {
  // The owner of the repository which the repository branch belongs to.
  string repository_owner = 1;
  // The name of the repository which the repository branch belongs to.
  string repository_name = 2;
  // The name of the repository branch whose commits should be listed.
  string repository_branch_name = 3;
  uint32 page_size = 4;
  string page_token = 5;
  bool reverse = 6;
}

message ListRepositoryCommitsByBranchResponse {
  repeated RepositoryCommit repository_commits = 1;
  string next_page_token = 2;
}

message GetRepositoryCommitByReferenceRequest {
  // The owner of the repository which the repository branch belongs to.
  string repository_owner = 1;
  // The name of the repository which the repository branch belongs to.
  string repository_name = 2;
  // The reference that should be resolved to a commit. Can be a branch, tag or commit.
  string reference = 3;
}

message GetRepositoryCommitByReferenceResponse {
  RepositoryCommit repository_commit = 1;
}

message GetRepositoryCommitBySequenceIDRequest {
  // The owner of the repository which the repository branch belongs to.
  string repository_owner = 1;
  // The name of the repository which the repository branch belongs to.
  string repository_name = 2;
  // The name of the repository branch which the sequence ID is relative to.
  string repository_branch_name = 3;
  // The sequence ID to look up.
  int64 commit_sequence_id = 4;
}

message GetRepositoryCommitBySequenceIDResponse {
  RepositoryCommit repository_commit = 1;
}
